# NumSim

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  analyse.sh  geometry.txt  mc_analyse.tex  mc_conv.awk  mc_mean-sd.awk  montecarlo.sh  param.txt  profiler.param  profiler.sh  runtime.sh  tr100_analyse.tex  tr200_analyse.tex  tr50_analyse.tex  tr_analyse.tex  tr_conv.awk  tr_mean-sd.awk  trapez.sh
blatt4/: analyse.sh  mc_analyse.tex  mc_conv.awk  mc_mean-sd.awk  montecarlo.sh  tr_conv.awk  tr_mean-sd.awk  trapez.sh
data/: channel.geom  channel.param  drivencavity.geom  drivencavity.param  karman.geom  pressure.geom  pressure.param  step.geom  step.param
multigrid/: analyse.sh  drivencavity128.geom  drivencavity128.param  drivencavity16.geom  drivencavity16.param  drivencavity32.param  drivencavity8.geom  drivencavity8.param
presentation/: Makefile  cmp.awk  it_MG.csv  it_RB.csv  it_SOR.csv  presentation.tex  presentationST.sty
presentation/data/: drivencavity.param  drivencavity_1CG.csv  drivencavity_1MG.csv  drivencavity_1RBSOR.csv  drivencavity_1SOR.csv  drivencavity_2parallelCG.csv  drivencavity_2parallelMG.csv  drivencavity_2parallelRBSOR.csv  drivencavity_2parallelSOR.csv  drivencavity_4parallelCG.csv  drivencavity_4parallelMG.csv  drivencavity_4parallelRBSOR.csv  drivencavity_4parallelSOR.csv  it_CG.csv  speedup2_CG.csv  speedup2_MG.csv  speedup2_RB.csv  speedup2_SOR.csv  speedup4_CG.csv  speedup4_MG.csv  speedup4_RB.csv  speedup4_SOR.csv
presentation/parallel/: drivencavity_CG.csv  drivencavity_MG.csv  drivencavity_RBSOR.csv  drivencavity_SOR.csv
presentation/sequential/: drivencavity_CG.csv  drivencavity_MG.csv  drivencavity_RBSOR.csv  drivencavity_SOR.csv
presentation/speedup/: speedup2_RB.csv  speedup2_SOR.csv  speedup4_CG.csv  speedup4_MG.csv  speedup4_RB.csv  speedup4_SOR.csv
solver_runtime/: analyse.sh  analyse_parallel.sh  drivencavity128.param  drivencavity16.param  drivencavity256.geom  drivencavity32.geom  drivencavity32.param  drivencavity64.geom  drivencavity64.param  drivencavity8.param
src/: comm.cpp  comm.hpp  compare_solvers.cpp  compute.cpp  compute.hpp  creator.cpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  iterator.cpp  iterator.hpp  main.cpp  parameter.cpp  parameter.hpp  solver.cpp  solver.hpp  test_MG.cpp  test_RBsor.cpp  test_dc.cpp  test_iterator.cpp  test_mpi.cpp  test_solver.cpp  test_sor.cpp  typedef.hpp  visu.cpp  visu.hpp  vtk.cpp  vtk.hpp
